Buttons in rg-button-toolbar should have spacing 8px #RG-1763 Fixed

--- a/components/button-toolbar/button-toolbar.css
+++ b/components/button-toolbar/button-toolbar.css
@@ -13,7 +13,7 @@
 .buttonToolbar > .button,
 .buttonToolbar > .buttonGroup,
 .buttonToolbar > .buttonToolbar {
-  margin-right: calc(unit * 2);
+  margin-right: unit;
 }
 
 .buttonToolbar > :last-child {
